--- a/index.qmd
+++ b/index.qmd
@@ -43,7 +43,8 @@ body::before {
  left: 0;
  width: 100%;
  height: 100%;
- background-image: url('/images/Zenitsu.jpeg');
+ background-image: 
+ /*url('/images/Zenitsu.jpeg');*/
  background-size: cover;
  opacity: 0.3; /* Adjust this value to change the transparency of the background image */
  z-index: -1;
@@ -61,12 +62,10 @@ body::before {
 ::: edu-exp
 :::
 
-Analista de BI e Engenheiro de Dados Analítico com habilidades em R, Python, SQL, e Power BI. Experiência em construir e manter soluções de BI e engenharia de dados, auxiliando em tomada de decisões orientadas a dados qualificados e tecnologias para resolver problemas de negócios. Experiência em gerar fluxos de dados e implementar estratégias de negócios. Especialista em Data Science and Analytics.
+Analista de Business Intelligence e Engenheiro de Dados com fluência em análise de dados, relatórios e dashboard e modelagem de dados, usando ferramentas como Power BI, Python, SQL e R. Experiência no uso de API, Web scraping para coleta de dados e armazenamento com PostgreSQL e Oracle. Proativo e orientado a resultados, com habilidades em estatística e storytelling para gerar insights acionáveis e melhorar a tomada de decisões estratégicas. Experiência em desenvolvimento de soluções para otimizar processos e reduzir custos, incluindo automação e anál
 
-:::: {.grid}
-
+::: grid
 ::: {.g-col-12 .g-col-md-7 style="text-align: left;"}
-
 ## Formação
 
 -   ***MBA*** **Data Science and Analytics**\
@@ -76,7 +75,6 @@ Analista de BI e Engenheiro de Dados Analítico com habilidades em R, Python, SQ
 -   ***Esp.*** **em Geoprocessamento**\
     *2023-2024*\
     *Universidade Federal Rural da Amazônia*
-    
 
 -   ***M.Sc.*** **em Ciências Ambientais**\
     *2021-2023*\
@@ -93,9 +91,9 @@ Analista de BI e Engenheiro de Dados Analítico com habilidades em R, Python, SQ
 -   ***Grupo Mônaco***\
     **abr/2024-presente**\
     *Cargo: Analista de BI*
-    
+
 -   ***Secretarial Municipal de Saúde***\
-    **nov/2021-presente**\
+    **nov/2021-dez/2024**\
     *Cargo: Analista de Dados*
 :::
-::::
+:::
